yololens-nogpu.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: yololens-nogpu
  labels:
    app: yololens-nogpu
spec:
  selector:
    matchLabels:
      app: yololens-nogpu
  template:
    metadata:
      labels:
        app: yololens-nogpu
    spec:
      nodeSelector:
        agentpool: cpupool
      containers:
        - name: yololens-nogpu
          image: adcaline/yololens-nogpu
          ports:
            - containerPort: 80
          volumeMounts:
            - name: weights
              mountPath: /mnt/weights
          resources:
            limits:
      volumes:
        - name: weights
          persistentVolumeClaim:
            claimName: yolo-weights-disk-nogpu
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: yololens-nogpu
spec:
  type: ClusterIP
  selector:
    app: yololens-nogpu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
