yololens.yml
kind: Pod
apiVersion: v1
metadata:
  name: yololens
  labels:
    app: yololens
spec:
  containers:
    - name: yololens
      image: adcaline/yololens
      ports:
        - containerPort: 80
      volumeMounts:
        - name: nvidia
          mountPath: /usr/local/nvidia
        - name: weights
          mountPath: /mnt/weights
      resources:
        limits:
          alpha.kubernetes.io/nvidia-gpu: 1
  volumes:
    - name: nvidia
      hostPath:
        path: /usr/local/nvidia
    - name: weights
      persistentVolumeClaim:
        claimName: yolo-weights-disk
  restartPolicy: OnFailure
---
kind: Service
apiVersion: v1
metadata:
  name: yololens
spec:
  type: LoadBalancer
  selector:
    app: yololens
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
